--- a/index.html
+++ b/index.html
@@ -7,43 +7,73 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Interactive rating component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-
-  <!-- Rating state start -->
-
-  How did we do?
-
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
-
-  1 2 3 4 5
-
-  Submit
-
-  <!-- Rating state end -->
-
-  <!-- Thank you state start -->
-
-  You selected <!-- Add rating here --> out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-
-  <!-- Thank you state end -->
-
-  
+  <div class="container">
+    <form action="#" id="rate" onsubmit="return false">
+      <div class="sphere">
+        <img src="images/icon-star.svg" alt="star">
+      </div>
+      <h1>
+        How did we do?
+      </h1>
+      <p>
+        Please let us know how we did with your support request. All feedback is appreciated 
+        to help us improve our offering!
+      </p>
+      <ul>
+        <li>
+          <button type="button" class="sphere" onclick="SelectNumber(1)" id="1">
+            1
+          </button>
+        </li>
+        <li>
+          <button type="button" class="sphere" onclick="SelectNumber(2)" id="2">
+            2
+          </button>
+        </li>
+        <li>
+          <button type="button" class="sphere" onclick="SelectNumber(3)" id="3">
+            3
+          </button>
+        </li>
+        <li>
+          <button type="button" class="sphere" onclick="SelectNumber(4)" id="4">
+            4
+          </button>
+        </li>
+        <li>
+          <button type="button" class="sphere" onclick="SelectNumber(5)" id="5">
+            5
+          </button>
+        </li>
+      </ul>
+      <button type="button" class="submit" onclick="Submit()">
+        Submit
+      </button>
+    </form>
+    <!-- Rating state end -->
+    <!-- Thank you state start -->
+    <div class="result" id="scoreResult">
+      <img src="images/illustration-thank-you.svg" alt="thank you">
+      <span id="score"></span>
+      <h2>
+        Thank you!
+      </h2>
+      <p>
+        We appreciate you taking the time to give a rating. If you ever need more support, 
+      don’t hesitate to get in touch!
+      </p>
+    </div>
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/ericlesbrum" target="_blank">Ericles Brum</a>.
   </div>
+  <script src="javascript/main.js"></script>
 </body>
 </html>
